Wed Jan  7 20:12:14 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* doc/api.xsl, doc/site.xsl, doc/search.php: a little
	  cleanup of scripts, assuring page tables are consistent.
	* doc/*: api docs rebuilt with enhanced scripts.

Tue Jan  6 23:38:47 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* configure.in: fixed Bug130593.
	* doc/apibuild.py: fixed a couple of sequence problems on
	  references within APIxxx.html files, rebuild doc/* (and NEWS)

Sun Jan  4 19:06:59 MST 2004 John Fleck <jfleck@inkstain.net>

	* doc/newapi.xsl: change background color of function
	declaration to improve readability
	* doc/*: rebuild docs with new stylesheet

Fri Jan  2 21:42:49 MST 2004 John Fleck <jfleck@inkstain.net>

	* libxslt/transform.c: fix bad doc comment formatting on 
	xsltDebugSetDefaultTrace and xsltDebugGetDefaultTrace
	* doc/*: rebuild docs

Wed Dec 24 15:15:52 CET 2003 Daniel Veillard <daniel@veillard.com>

	* configure.in doc/*: prepared release of libxslt-1.1.2
	* libxslt.spec.in doc/Makefile.am: some tweaking following the
	  new EXSLT docs.

Mon Dec 22 20:33:08 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* libxlst/numbers.c: fixed xsl:number level="any" for Bug
	  129057

Sun Dec 21 21:38:11 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* libxslt/numbers.c: added namespace comparison for
	  xsl:number count function (Bug 129057)

Sun Dec 21 13:56:48 CET 2003 Daniel Veillard <daniel@veillard.com>

	* tests/docs/Makefile.am tests/docs/bug-139.xml
	  tests/general/Makefile.am tests/general/bug-139*: added
	  test for entities parsing (Bug #129489)

Sun Dec 21 20:33:27 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* tests/docs/Makefile.am tests/docs/bug-138.xml
	  tests/general/Makefile.am tests/general/bug-138*: added
	  test for namespace problem (Bug #129624)

Sun Dec 21 13:17:05 CET 2003 Daniel Veillard <daniel@veillard.com>

	* xsltproc.c: fixed #129327 make sure parser flags get transmitted to
	  the transformation context