@@ -99,8 +99,10 @@ useful resources:</p>
 
 <p>Well, bugs or missing features are always possible, and I will make a
 point of fixing them in a timely fashion. The best way to report a bug is to
-use the <a href="http://bugzilla.gnome.org/buglist.cgi?product=libxslt">Gnome
-bug tracking database</a> (make sure to use the "libxslt" module name). I
+use the <a href="http://bugzilla.gnome.org/enter_bug.cgi?product=libxslt">Gnome
+bug tracking database</a> (make sure to use the "libxslt" module name). Before
+      filing a bug, check the <a href="http://bugzilla.gnome.org/buglist.cgi?product=libxslt">list of existing libxslt bugs</a> to
+	  make sure it hasn't already been filed. I
 look at reports there regularly and it's good to have a reminder when a bug
 is still open. Be sure to specify that the bug is for the package libxslt.</p>
 
