@@ -1,3 +1,8 @@
+Thu Jan  8 06:45:04 MST 2004 John Fleck <jfleck@inkstain.net>
+
+	* doc/xslt.html, doc/bugs.html
+	made link to bugzilla more useful
+
 Wed Jan  7 20:12:14 HKT 2004 William Brack <wbrack@mmm.com.hk>
 
 	* doc/api.xsl, doc/site.xsl, doc/search.php: a little
